JWT & API Key with QR Code

--- a/idcloud-idv-connect/Swift/IdCloud KYC Connect/Localizable.strings
+++ b/idcloud-idv-connect/Swift/IdCloud KYC Connect/Localizable.strings
@@ -65,6 +65,9 @@
 
 
 // MARK: - KYC
+"STRING_KYC_INTRO_BUTTON_SCANN"                 = "QR Code Scanner";
+"STRING_KYC_INTRO_BUTTON_NEXT"                  = "OnBoard";
+
 "STRING_KYC_DOCUMENT_CAPTURE"                   = "Document Capture: %@";
 "STRING_KYC_ID_CARD"                            = "ID Card";
 "STRING_KYC_PASSPORT"                           = "Passport";
@@ -74,7 +77,8 @@
 "STRING_KYC_FIRST_STEP_REVIEW"                  = "Review and submit your information";
 
 "STRING_KYC_OPTION_SECTION_GENERAL"             = "General settings";
-"STRING_KYC_OPTION_WEB_TOKEN"                   = "Update JSON Web Token";
+"STRING_KYC_OPTION_WEB_TOKEN"                   = "JSON Web Token validity";
+"STRING_KYC_OPTION_QR_CODE"                     = "Scan QR Code";
 "STRING_KYC_OPTION_FACE_REC_CAP"                = "Facial recognition";
 "STRING_KYC_OPTION_FACE_REC_DES"                = "Take a selfie after ID verification step.\nThe facial recognition is done by a server.";
 "STRING_KYC_OPTION_VOICE_INSTR_CAP"             = "Voice Instructions";
@@ -177,6 +181,12 @@
 "STRING_JSON_WEB_TOKEN_INVALID"                 = "Invalid JWT. Value was not stored.";
 "STRING_JSON_WEB_TOKEN_EXPIRATION"              = "JWT Expiration";
 "STRING_JSON_WEB_TOKEN_NO_EXPIRATION"           = "Failed to get expiration date.";
+
+// MARK: - QR Code Parser
+"STRING_QR_CODE_ERROR_FAILED"                   = "Failed to parse QR Code";
+"STRING_QR_CODE_ERROR_INVALID_DATA"             = "Invalid QR Code data";
+"STRING_QR_CODE_ERROR_INVALID_JWT"              = "Invalid JWT";
+"STRING_QR_CODE_INFO_DONE"                      = "Values updated";
 
 // MARK: - Acuant
 
